--- a/package.json
+++ b/package.json
@@ -12,13 +12,23 @@
   "workspaces": [
     "packages/*"
   ],
-  "scripts": {},
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --ignore-path .prettierignore.precommit --write"
+    ]
+  },
+  "scripts": {
+    "prepare": "husky install"
+  },
   "devDependencies": {
     "@types/node": "^18.16.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4"
   }
