--- a/package.json
+++ b/package.json
@@ -15,21 +15,26 @@
   "lint-staged": {
     "*.ts": [
       "eslint --fix",
-      "prettier --ignore-path .prettierignore.precommit --write"
+      "prettier --ignore-path .prettierignore.precommit --write",
+      "jest --bail --findRelatedTests --passWithNoTests"
     ]
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.16.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
 }
